--- a/frontend/src/pages/admin/home/homeAdmin.scss
+++ b/frontend/src/pages/admin/home/homeAdmin.scss
@@ -3,11 +3,15 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    height: 110vh;
+    height: 100vh;
     width: 100%;
 }
 
 .MainAdmin {
+    min-height: 100vh;
+    flex-direction: column;
+    display: flex;
+
     --card-hover-shadow: -1px 10px 10px #000000ea;
     --card-shadow: -2px 3px 2px #00000077;
     --paragraph-color: #333333;
