--- a/frontend/src/pages/admin/infos/addInfosVirus.scss
+++ b/frontend/src/pages/admin/infos/addInfosVirus.scss
@@ -1,14 +1,17 @@
-.MainCadastro {
+.MainAdd {
   transition: background 0.3s, color 0.3s;
+  flex-direction: column;
+  min-height: 100vh;
+  display: flex;
 }
 
 /* Tema claro */
-.MainCadastro.light {
+.MainAdd.light {
   color: #1e293b;
 }
 
 /* Tema escuro */
-.MainCadastro.dark {
+.MainAdd.dark {
   color: #e2e8f0;
 }
 
