--- a/frontend/src/pages/admin/infos/addInfosVirus.scss
+++ b/frontend/src/pages/admin/infos/addInfosVirus.scss
@@ -3,16 +3,21 @@
   flex-direction: column;
   min-height: 100vh;
   display: flex;
+
 }
 
 /* Tema claro */
 .MainAdd.light {
   color: #1e293b;
+  --card-bg: #fff;
+  --list-bg: rgba(80, 168, 120, 0.904);
 }
 
 /* Tema escuro */
 .MainAdd.dark {
   color: #e2e8f0;
+  --card-bg: #5f5f5f;
+  --list-bg: rgba(41, 88, 62, 0.904);
 }
 
 .criar-container {
@@ -30,7 +35,7 @@
   flex: 1;
   min-width: 280px;
   max-width: 500px;
-  background: var(--card-bg, #f5f5f5);
+  background: var(--card-bg);
   border: 1px solid var(--card-border, #000);
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -95,7 +100,7 @@
   flex: 1;
   min-width: 280px;
   max-width: 500px;
-  background: var(--list-bg, rgba(170, 243, 203, 0.8));
+  background: var(--list-bg);
   border: 1px solid var(--card-border, #000);
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
