--- a/frontend/src/components/footer/index.scss
+++ b/frontend/src/components/footer/index.scss
@@ -6,6 +6,7 @@
     --border-color: #00000033;
     --section-bg: #ffffff33;
 
+    width: 100%;
     background: var(--footer-bg);
     color: var(--text-color);
     padding: 2rem 1rem 1rem;
